second iteration of FindBug issues resolving (43 issues left)